      being read from a .vdb file, and although their values are not printable,
      they can be written back to disk.
    - Added a DESTDIR_LIB_DIR Makefile variable for Linux multiarch support.
      [Contributed by Mathieu Malaterre]
    - Added tools to create potential flow fields, as described in the
      2017 SIGGRAPH OpenVDB course.
      [Contributed by Double Negative]
    - Added tools to scatter OpenVDB points randomly throughout a volume.
      [Contributed by Nick Avramoussis]

    Improvements:
    - Significantly improved the performance of point data grid group filters.
      [Contributed by Double Negative]

    Bug fixes:
    - Fixed bugs in tools::ClosestSurfacePoint's distance calculations
      that caused searches to produce incorrect results.
    - Fixed a locking issue that affected multithreaded access to
      PointDataLeafNodes when delayed loading was in effect.
      [Contributed by Dan Bailey]

    ABI changes:
    - Made tree::InternalNode's destructor non-virtual.
    - The fix for a delayed-loading race condition in the LeafBuffer class
      that was only partially rolled out in the previous release is now
      enabled on all platforms.
    - Replaced a points::AttributeArray bit flag with an atomic integer
      to address a threading issue during delayed loading.
      [Contributed by Dan Bailey]
    - Deprecated the OPENVDB_2_ABI_COMPATIBLE and OPENVDB_3_ABI_COMPATIBLE
      macros in favor of a new OPENVDB_ABI_VERSION_NUMBER macro.
      The new macro defaults to the library major version number but can be
      set at compile time to an earlier version number to disable ABI changes
      since that version.  (Older ABIs will not be supported indefinitely,
      however.)  For example, compile OpenVDB and any dependent code
      with "-DOPENVDB_ABI_VERSION_NUMBER=4" to use the 4.x ABI.

    API changes:
    - Replaced tools::ClosestSurfacePoint::initialize() with