@@ -45,6 +45,9 @@
 
 #include <tbb/combinable.h>
 
+#include <type_traits>
+#include <vector>
+
 
 namespace openvdb {
 OPENVDB_USE_VERSION_NAMESPACE
