@@ -59,6 +59,12 @@
 
 #include <CH/CH_Manager.h> // for CHgetEvalTime
 
+#include <sstream>
+#include <stdexcept>
+#include <string>
+#include <utility>
+#include <vector>
+
 
 using namespace openvdb;
 using namespace openvdb::points;
